@@ -3,24 +3,29 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.jetbrains.kotlinx:atomicfu-gradle-plugin:0.14.1")
+        classpath("org.jetbrains.kotlinx:atomicfu-gradle-plugin:0.18.3")
     }
 }
 
 plugins {
-    kotlin("jvm") version "1.6.0"
+    kotlin("jvm") version "1.9.10"
     java
-}
-
-tasks {
-    test {
-        maxHeapSize = "4g"
-    }
 }
 
 apply(plugin = "kotlinx-atomicfu")
 
-group = "ru.ifmo.mpp"
+tasks {
+    test {
+        maxHeapSize = "4g"
+        jvmArgs(
+            "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-exports", "java.base/jdk.internal.util=ALL-UNNAMED",
+            "--add-exports", "java.base/sun.security.action=ALL-UNNAMED"
+        )
+    }
+}
+
+group = "ru.itmo.mpp"
 version = "1.0-SNAPSHOT"
 
 repositories {
@@ -29,13 +34,21 @@ repositories {
 
 dependencies {
     implementation(kotlin("stdlib-jdk8"))
+    implementation(kotlin("reflect"))
     testImplementation(kotlin("test-junit"))
+    testImplementation("org.jetbrains.kotlinx:lincheck:2.23")
 }
 
-sourceSets["main"].java.setSrcDirs(listOf("src"))
-sourceSets["test"].java.setSrcDirs(listOf("test"))
-
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
+sourceSets.main {
+    java.srcDir("src")
+}
+
+sourceSets.test {
+    java.srcDir("test")
 }
